syntax = "proto3";


package proto;

option go_package = "proto/";




service blockchain {
    rpc AddBlock(AddBlockRequest) returns (AddBlockResponse) {}
    rpc GetBlockchain(GetBlockchainRequest) returns (GetBlockchainResponse){}
    rpc BroadCast (BroadcastRequest) returns (BroadcastResponse){}
}

message AddBlockRequest {
    string data = 1;
}

message AddBlockResponse {
    string hash = 1;
}

message GetBlockchainRequest {

}

message Block {
    string hash = 1;
    string PrevBlockHash = 2;
    string data = 3;
}

message GetBlockchainResponse {
   repeated Block blocks = 1;  
}


message BroadcastRequest {
    string transactionHash = 1;
    int32 count = 2;
}

message BroadcastResponse {
    string nodeAddr = 1;
    string transactionHash = 2;
    int32 count = 3;
}
